--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
+torch
+transformers
+gradio
+chromadb
+sentence-transformers
+numpy
+pandas
+scikit-learn
 fastapi
 uvicorn
-transformers
-torch
-sentence-transformers
-faiss-cpu
-flask
-gradio
-pandas
-numpy
-python-multipart
 requests
-typing_extensions
-gunicorn
